--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# change application running port
+server.port=8080
 
+# logging levels
+# they are ordered by the importance
+# error
+# warning
+# info - default level
+# debug
+# trace
+logging.level.com.sda.javaremoteee21spring.service=debug
+
+# changing spring login level
+#logging.level.org.springframework=debug
