--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ logging.level.com.sda.javaremoteee21spring.service=debug
 
 # changing spring login level
 #logging.level.org.springframework=debug
+
+# database properties
+spring.datasource.url=jdbc:h2:mem:spring-db
+spring.datasource.username=sa
+spring.datasource.password=
